# latex-template

./: .gitignore  LICENSE  Makefile.am  Makefile.latex  README  autogen.sh  configure.ac  postamble.tex  preamble.tex  report.tex
